# StockTechAnalyzer

./: .env.example  .replit  Dockerfile  README.md  auth.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  replit.md  requirements.txt  sample_data.py  stock_analysis.db
attached_assets/: Pasted-Backend-Developer-Assignment-Stock-Technical-Analysis-API-Company-Kalpi-Capital-India-s-first--1751553777088_1751553777088.txt
routes/: auth_routes.py  indicators_routes.py
schemas/: auth_schemas.py  indicator_schemas.py
services/: cache_service.py  data_service.py  rate_limiter.py  technical_indicators.py
static/: index.html
stock_tech_analyzer/: __init__.py
tests/: test_indicators.py
utils/: exceptions.py  logging_config.py
